# QDPXX-Kokkos-Play

./: .gitmodules  CMakeLists.txt  README.md  build.sh  env.sh
include/: binop_add.hpp  binop_add_olattice.hpp  test.hpp  test2.hpp  test3.hpp
scripts/: build.sh  build_cce_omptarget_tulip.sh  build_hip_tulip.sh  build_nvsocal2.sh  build_summmit_nvcc.sh  env_nvsocal2.sh  env_summit.sh  env_tulip_cce.sh  env_tulip_mi60.sh
test/: CMakeLists.txt  bw_tests.cpp  test1.cpp  test2.cpp  test3.cpp  test_add.cpp  test_add2.cpp  test_add_olattice.cpp
